fix: resolve GitHub Actions CI/CD issues
- Fix pnpm version mismatch in GitHub workflows
- Update pnpm-action-setup to v4 with correct version specification
- Add fallback logic for lockfile handling
- Regenerate pnpm-lock.yaml for compatibility
- Fix author URL in package.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10
+          version: '10.19.0'
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -28,7 +29,12 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ -f pnpm-lock.yaml ]; then
+            pnpm install --frozen-lockfile
+          else
+            pnpm install
+          fi
 
       - name: Build Packages
         run: pnpm build
