--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "author": {
     "name": "Taha Kazmi",
-    "url": "https://github.com/lfgraphics"
+    "url": "https://github.com/cod-vista"
   },
   "license": "MIT",
   "packageManager": "pnpm@10.19.0",
