--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   "packageManager": "pnpm@10.19.0",
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
+    "@eslint/js": "^9.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
+    "eslint": "^9.13.0",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3"
   },
