--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cvians/cli",
+  "name": "@codvista/cvians-cli",
   "version": "0.2.0",
   "description": "CLI tool for installing Cvians UI components",
   "type": "module",
