--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "dependencies": {
-    "@cvians/core": "workspace:*",
+    "@codvista/cvians-core": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
