--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codvista/cvians-core",
-  "version": "1.0.0",
+  "version": "2.1.1",
   "description": "Core components for the Cvians UI library - Excel-like tables and more",
   "type": "module",
   "main": "./dist/index.js",
@@ -56,14 +56,20 @@
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0 <21.0.0",
+    "react-dom": ">=16.8.0 <21.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
-    "tailwind-merge": "^2.5.3"
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss": "^4.1.16",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
@@ -74,5 +80,13 @@
     "react-dom": "^18.3.1",
     "tsup": "^8.3.0",
     "typescript": "^5.6.3"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "react-dom": {
+      "optional": false
+    }
   }
 }
