--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codvista/cvians-core",
-  "version": "2.1.3",
+  "version": "2.1.9",
   "description": "Core components for the Cvians UI library - Excel-like tables and more",
   "type": "module",
   "main": "./dist/index.js",
@@ -60,6 +60,7 @@
     "react-dom": ">=16.8.0 <21.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.15",
