fix: Update pnpm lockfile and workspace references for package rename
- Updated examples package to use @codvista/cvians-excel-table
- Fixed workspace references from file: to workspace: protocol
- Updated pnpm-lock.yaml to reflect new package structure
- Verified frozen lockfile compatibility for CI environments

--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "dependencies": {
-    "@codvista/cvians-core": "workspace:*",
+    "@codvista/cvians-excel-table": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
