--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@excel-ui/core": ["../packages/core/src"]
+      "@excel-ui/core": ["../packages/excel-table/src"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
