fixed dependencies issue

--- a/packages/excel-table/package.json
+++ b/packages/excel-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codvista/cvians-excel-table",
-  "version": "1.1.0",
+  "version": "2.1.0",
   "description": "Excel-like table components with advanced filtering, sorting, and data type awareness",
   "type": "module",
   "main": "./dist/index.js",
@@ -28,6 +28,12 @@
     "clean": "rm -rf dist"
   },
   "keywords": [
+    "excel table",
+    "excel like table",
+    "cvians excel table",
+    "excel like table for web",
+    "excel table compatible with react",
+    "excel table compatible with preact",
     "react",
     "preact",
     "components",
@@ -56,6 +62,9 @@
     "access": "public"
   },
   "peerDependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.451.0",
     "react": ">=16.8.0 <21.0.0",
     "react-dom": ">=16.8.0 <21.0.0"
   },
@@ -64,29 +73,33 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.451.0",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-animate": "^1.0.7"
+    "@radix-ui/react-slot": "^1.2.3"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^9.13.0",
-    "preact": "^10.24.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.3"
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.16",
+    "tailwindcss-animate": "^1.0.7",
+    "tsup": "^8.5.0",
+    "typescript": "^5.9.3"
   },
   "peerDependenciesMeta": {
     "react": {
       "optional": false
     },
     "react-dom": {
+      "optional": false
+    },
+    "class-variance-authority": {
+      "optional": false
+    },
+    "clsx": {
+      "optional": false
+    },
+    "lucide-react": {
       "optional": false
     }
   }
