--- a/packages/excel-table/package.json
+++ b/packages/excel-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codvista/cvians-excel-table",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Excel-like table components with advanced filtering, sorting, and data type awareness",
   "type": "module",
   "main": "./dist/index.js",
@@ -78,6 +78,9 @@
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
