--- a/packages/excel-table/package.json
+++ b/packages/excel-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codvista/cvians-excel-table",
-  "version": "2.2.1",
+  "version": "2.5.0",
   "description": "Excel-like table components with advanced filtering, sorting, and data type awareness",
   "type": "module",
   "main": "./dist/index.js",
@@ -72,7 +72,9 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3"
   },
   "devDependencies": {
